<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tahajud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sholat_tahajud"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/witir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sholat_witir"
        android:textSize="18sp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/rawatib"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sholat_rawatib"
        android:textSize="18sp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/dhuha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sholat_dhuha"
        android:textSize="18sp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/istikhoroh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sholat_istikhoroh"
        android:textSize="18sp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/tahiyyatulmasjid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sholat_tahiyyatul_masjid"
        android:textSize="18dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/syuruq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sholat_syuruq"
        android:textSize="18sp"
        android:layout_marginTop="10dp"/>

</LinearLayout>